--- a/app/src/main/res/layout/item_instrument.xml
+++ b/app/src/main/res/layout/item_instrument.xml
@@ -15,10 +15,12 @@
     <TextView
         android:id="@+id/tvPageTitle"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textColor="@color/white" />
 
     <TextView
         android:id="@+id/tvPageDescription"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textColor="@color/white" />
 </LinearLayout>
