--- a/app/src/main/res/layout/item_mood.xml
+++ b/app/src/main/res/layout/item_mood.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp"
+    android:id="@+id/llContainer"
     android:layout_margin="4dp"
     android:background="@drawable/bg_mood_type"
     android:orientation="horizontal">
