--- a/app/src/main/res/layout/item_pages.xml
+++ b/app/src/main/res/layout/item_pages.xml
@@ -4,6 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginEnd="8dp"
+    android:foreground="?selectableItemBackground"
     android:orientation="vertical">
 
 
