--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="colorStrongGray">#82858C</color>
     <color name="white">#ffffff</color>
     <color name="black">#333333</color>
+    <color name="colorChecked">#219AEB</color>
+    <color name="colorUnchecked">#82BFE7</color>
 </resources>
