--- a/app/src/main/res/layout/fragment_login_with_email.xml
+++ b/app/src/main/res/layout/fragment_login_with_email.xml
@@ -39,6 +39,7 @@
             android:textColor="@color/white" />
 
         <EditText
+            android:id="@+id/enterLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -65,6 +66,7 @@
             app:passwordToggleEnabled="true">
 
             <EditText
+                android:id="@+id/enterPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/login_et_background"
