--- a/app/src/main/res/layout/fragment_pass_reset.xml
+++ b/app/src/main/res/layout/fragment_pass_reset.xml
@@ -18,6 +18,7 @@
         android:textSize="@dimen/font_standart" />
 
     <EditText
+        android:id="@+id/email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -29,6 +30,7 @@
         android:paddingBottom="14dp" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnNext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
