--- a/app/src/main/res/layout/item_pages.xml
+++ b/app/src/main/res/layout/item_pages.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/llContainer"
-    android:layout_width="wrap_content"
+    android:layout_width="240dp"
     android:layout_height="wrap_content"
     android:layout_marginEnd="8dp"
     android:foreground="?selectableItemBackground"
@@ -11,7 +11,9 @@
     <ImageView
         android:id="@+id/ivPages"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:background="@drawable/bg_collection"
+        android:scaleType="fitXY"
+        android:layout_height="140dp" />
 
     <TextView
         android:id="@+id/tvPageTitle"
@@ -21,5 +23,6 @@
     <TextView
         android:id="@+id/tvPageDescription"
         android:layout_width="wrap_content"
+        android:maxLines="2"
         android:layout_height="wrap_content" />
 </LinearLayout>
