--- a/app/src/main/res/layout/fragment_main_item.xml
+++ b/app/src/main/res/layout/fragment_main_item.xml
@@ -12,7 +12,7 @@
 
         <TextView
             android:id="@+id/title"
-            style="@style/PrimaryTitleText"
+            style="@style/PrimaryTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
