--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,17 +8,20 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
-    <!-- Enter Button's text Style -->
     <style name="EnterButtonText" parent="AppTheme">
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/colorStrongGray</item>
     </style>
 
-    <!--Title primary text style -->
-    <style name="PrimaryTitleText" parent="AppTheme">
+    <style name="PrimaryTitle" parent="Widget.AppCompat.TextView">
         <item name="android:textSize">28sp</item>
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/blackText</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="CollectionTitle" parent="Widget.AppCompat.TextView">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/blackText</item>
     </style>
 
     <!--Title Secondary text style -->
